# src/server/schemas/community_plan.go
@@ -7,7 +7,15 @@ type CommunityPlan struct {
 	PlanId      uuid.UUID `json:"plan_id"`
 }
 
+type CommunityPlans struct {
+	CommunityPlans []*CommunityPlan `json:"community_plans"`
+}
+
 type CreateCommunityPlanRequest struct {
 	CommunityId uuid.UUID `json:"community_id" validate:"required"`
 	PlanId      uuid.UUID `json:"plan_id"      validate:"required"`
+}
+
+type BatchCreateCommunityPlanRequest struct {
+	CommunityPlans []*CreateCommunityPlanRequest `json:"community_plans"`
 }
